// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleResponsiveValues should handle responsive values with breakpoint array values 1`] = `
"padding-block-start: 4rem;
padding-inline-end: 4rem;
padding-block-end: 4rem;
padding-inline-start: 4rem;
margin-block-start: 16px;
margin-inline-end: 8px;
margin-block-end: 8px;
margin-inline-start: 8px;
@media(min-width: 768px){ padding-block-start: 2rem;
padding-inline-end: 4rem;
padding-block-end: 8rem;
padding-inline-start: 4rem;
margin-block-start: 1rem;
margin-inline-end: 4px;
margin-block-end: 8px;
margin-inline-start: 4px; }
@media(min-width: 1280px){ padding-block-start: 24px;
padding-inline-end: 24px;
padding-block-end: 24px;
padding-inline-start: 24px;
margin-block-start: 22px;
margin-inline-end: 4px;
margin-block-end: 40px;
margin-inline-start: 4px; }"
`;

exports[`handleResponsiveValues should handle responsive values with different breakpoints 1`] = `
"padding-block-start: 4px;
padding-inline-end: 4px;
padding-block-end: 4px;
padding-inline-start: 4px;
margin-block-start: 8px;
margin-inline-end: 8px;
margin-block-end: 8px;
margin-inline-start: 8px;
@media(min-width: 520px){ padding-block-start: 8px;
padding-inline-end: 8px;
padding-block-end: 8px;
padding-inline-start: 8px;
margin-block-start: 16px;
margin-inline-end: 16px;
margin-block-end: 16px;
margin-inline-start: 16px; }
@media(min-width: 768px){ padding-block-start: 12px;
padding-inline-end: 12px;
padding-block-end: 12px;
padding-inline-start: 12px;
margin-block-start: 24px;
margin-inline-end: 24px;
margin-block-end: 24px;
margin-inline-start: 24px; }
@media(min-width: 1280px){ padding-block-start: 16px;
padding-inline-end: 16px;
padding-block-end: 16px;
padding-inline-start: 16px;
margin-block-start: 40px;
margin-inline-end: 40px;
margin-block-end: 40px;
margin-inline-start: 40px; }"
`;

exports[`handleResponsiveValues should handle responsive values with mixed prop type 1`] = `
"padding-block-start: 4px;
padding-inline-end: 8px;
padding-block-end: 4px;
padding-inline-start: 4px;
margin-block-start: 4px;
margin-inline-end: 8px;
margin-block-end: 8px;
margin-inline-start: 8px;
@media(min-width: 520px){ padding-block-start: 8px;
padding-inline-end: 16px;
padding-block-end: 8px;
padding-inline-start: 8px;
margin-block-start: 2rem; }
@media(min-width: 768px){ padding-block-start: 1rem;
padding-inline-end: 24px;
padding-block-end: 1rem;
padding-inline-start: 1rem; }
@media(min-width: 1280px){ padding-block-start: 16px;
padding-inline-end: 8px;
padding-block-end: 16px;
padding-inline-start: 16px; }"
`;

exports[`handleResponsiveValues should handle simple space values from theme 1`] = `
"padding-block-start: 8px;
padding-inline-end: 8px;
padding-block-end: 8px;
padding-inline-start: 8px;
margin-block-start: 16px;
margin-inline-end: 16px;
margin-block-end: 16px;
margin-inline-start: 16px;"
`;

exports[`handleResponsiveValues should handle simple string values 1`] = `
"padding-block-start: 1rem;
padding-inline-end: 1rem;
padding-block-end: 1rem;
padding-inline-start: 1rem;
margin-block-start: 4px;
margin-inline-end: 4px;
margin-block-end: 4px;
margin-inline-start: 4px;"
`;

exports[`handleResponsiveValues should handle simple value array and map to logical props wherever required 1`] = `
"padding-block-start: 4rem;
padding-inline-end: 4rem;
padding-block-end: 8rem;
padding-inline-start: 4rem;
margin-block-start: 4px;
margin-inline-end: 4px;
margin-block-end: 8px;
margin-inline-start: 4px;
@media(min-width: 768px){ padding-block-start: 16px; }
@media(min-width: 1280px){ padding-block-start: 24px; }"
`;
